# navigation

./: .gitignore
back_out/: CMakeLists.txt  back_out_plugin.xml  package.xml
back_out/include/: back_out.h
back_out/src/: back_out.cpp
costmap_2d/: CMakeLists.txt  costmap_plugins.xml  package.xml
costmap_2d/cfg/: ProxemicLayer.cfg
costmap_2d/include/costmap_2d/: proxemic_layer.h  social_layer.h  timed_obstacle_layer.h
costmap_2d/plugins/: inflation_layer.cpp  obstacle_layer.cpp  proxemic_layer.cpp  social_layer.cpp  timed_obstacle_layer.cpp
dwa_local_planner/cfg/: DWAPlanner.cfg
dwa_local_planner/include/dwa_local_planner/: dwa_planner_ros.h
dwa_local_planner/src/: dwa_planner.cpp  dwa_planner_ros.cpp
global_planner/include/global_planner/: dijkstra.h
move_base/src/: move_base.cpp
nav_core/include/nav_core/: base_local_planner.h  recovery_behavior.h
rotate_recovery/src/: rotate_recovery.cpp
