<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
    <name>back_out</name>
    <version>1.16.3</version>
    <description>

        back_out

    </description>

    <maintainer email="davidvlu@gmail.com">David V. Lu!!</maintainer>

    <license>BSD</license>
    <url>http://wiki.ros.org/move_slow_and_clear</url>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>cmake_modules</build_depend>

    <depend>costmap_2d</depend>
    <depend>geometry_msgs</depend>
    <depend>nav_core</depend>
    <depend>pluginlib</depend>
    <depend>roscpp</depend>
    <depend>gazebo_msgs</depend>

    <export>
        <nav_core plugin="${prefix}/back_out_plugin.xml" />
    </export>

</package>


